--- a/index.html
+++ b/index.html
@@ -1,1 +1,444 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="keywords" content="JesseTech - Data Scientist Portfolio Website" />
+<meta name="description" content="JesseTech - Data Scientist Portfolio Website" />
+<meta name="Web Cannon-Z" content="www.webcannonz.com" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<title>JesseTech - Data Scientist</title>
+
+<!-- favicon icon -->
+<link rel="shortcut icon" href="images/favicon.ico" />
+
+<!-- inject css start -->
+
+<!--== bootstrap -->
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+
+<!--== animate -->
+<link href="css/animate.css" rel="stylesheet" type="text/css" />
+
+<!--== fontawesome -->
+<link href="css/fontawesome-all.css" rel="stylesheet" type="text/css" />
+
+<!--== line-awesome -->
+<link href="css/line-awesome.min.css" rel="stylesheet" type="text/css" />
+
+<!--== magnific-popup -->
+<link href="css/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
+
+<!--== owl-carousel -->
+<link href="css/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css" />
+
+<!--== base -->
+<link href="css/base.css" rel="stylesheet" type="text/css" />
+
+<!--== shortcodes -->
+<link href="css/shortcodes.css" rel="stylesheet" type="text/css" />
+
+<!--== default-theme -->
+<link href="css/style.css" rel="stylesheet" type="text/css" />
+
+<!--== responsive -->
+<link href="css/responsive.css" rel="stylesheet" type="text/css" />
+
+<!-- inject css end -->
+
+</head>
+
+<body>
+
+<!-- page wrapper start -->
+
+<div class="page-wrapper">
+
+<!-- preloader start -->
+
+<div id="ht-preloader">
+  <div class="clear-loader">
+    <div class="loader">
+      <div class="loader-div"><span>JesseTech</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- preloader end -->
+
+
+<!--header start-->
+
+<header id="site-header" class="header">
+  <div id="header-wrap">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- Navbar -->
+          <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand logo" href="index.html" style="font-size: 2rem;">
+              <span style="color: black;">Jesse</span>Tech
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"> <span></span>
+              <span></span>
+              <span></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto mr-auto">
+                <!-- Home -->
+                <li class="nav-item" data-toggle="hover"> <a class="nav-link " href="index.html" role="button"  aria-haspopup="true" aria-expanded="false">Home</a>
+                </li>
+                <li class="nav-item" data-toggle="hover"> <a class="nav-link " href="career.html" role="button"  aria-haspopup="true" aria-expanded="false">My Career</a>
+                </li>
+                <li class="nav-item" data-toggle="hover"> <a class="nav-link " href="about.html" role="button"  aria-haspopup="true" aria-expanded="false">My Story</a>
+                </li>
+                <li class="nav-item" data-toggle="hover"> <a class="nav-link " href="portfolio.html" role="button"  aria-haspopup="true" aria-expanded="false">Portfolio</a>
+                </li>
+                <li class="nav-item" data-toggle="hover"> <a class="nav-link " href="contact.html" role="button"  aria-haspopup="true" aria-expanded="false">Contact Me</a>
+                </li>
+              </ul>
+            </div>
+            <div class="right-nav align-items-center d-flex justify-content-end list-inline">
+              <div class="header-call d-flex align-items-center mr-3">
+                <h5>call:</h5>
+                <a href="tel:(408) 318-1238"><b>(408) 318-1238</b></a>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<!--header end-->
+
+
+<!--hero section start-->
+
+<section class="banner p-0 pos-r fullscreen-banner waters" >
+  <div id="particles-js"></div>
+  <div class="align-center">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 col-md-12">
+          <img class="img-center wow fadeInUp" data-wow-duration="2.5s" src="images/banner/01.png" alt="">
+          <div class="img-2">
+            <img class="img-center topBottom" src="images/banner/bulb.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-12 md-mt-5 wow fadeInRight" data-wow-duration="2.5s" >
+          <h5 class="title-theme-bg">Hey there, I'm Jesse</h5>
+          <h1 class="mb-4">I'm a <br> <span class="font-w-7">Data Scientist</span> <br> at Uber</h1>
+          <p class="lead mb-4">I Work on exciting A.I. projects at Uber Internal Audit and help with developing novel architectures to solve unprecedented problems in a fast-moving environment.</p> 
+          <!-- <a class="btn btn-theme " href="#jump" ><span>Let's Talk</span></a> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--hero section end-->
+
+
+<!--body content start-->
+
+
+
+
+
+  <!--about start-->
+
+<section class="pos-r py-15 z-index-1 " id="jump">
+  <div class="round-anim"></div>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-7 col-md-12 image-column p-0 pr-lg-5">
+        <div class="img-box box-shadow">
+          <img class="img-center" src="images/jesse/2.png" alt="">
+        </div>
+      </div>
+      <div class="col-lg-5 col-md-12 ml-auto md-mt-5">
+        <div class="section-title">
+          <h2 class="title"><span>JESSE</span></h2>
+          <div class="title-bdr">
+            <div class="left-bdr"></div>
+            <div class="right-bdr"></div>
+          </div>
+        </div>
+        <ul class="list-unstyled list-icon mb-5">
+          <li class="mb-3"><i class="fas fa-check-circle"></i> Experienced Data Scientist with a demonstrated history of working in the tech industry.  </li>
+          <li><i class="fas fa-check-circle"></i> Skilled in Machine Learning Algorithms, Data Science and Analytics, Accounting, and Public Speaking. Strong engineering professional with a Bachelor's Degree focused in Management Information Systems; Accounting; Finance from Purdue University.</li>
+        </ul> 
+        <!-- <a class="btn btn-theme btn-circle" href="contact.html"><span>Contact Me</span></a> -->
+        <!-- <a class="btn btn-white btn-circle" href="career.html"><span>More About Me</span></a> -->
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--about end-->
+
+
+
+<!--feature start-->
+
+<section>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-4 col-md-12">
+        <div class="featured-item style-2">
+          <div class="featured-icon">
+            <svg class="icon-vivus bd-color-1 feather feather-sliders" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+              <line x1="4" y1="21" x2="4" y2="14"></line>
+              <line x1="4" y1="10" x2="4" y2="3"></line>
+              <line x1="12" y1="21" x2="12" y2="12"></line>
+              <line x1="12" y1="8" x2="12" y2="3"></line>
+              <line x1="20" y1="21" x2="20" y2="16"></line>
+              <line x1="20" y1="12" x2="20" y2="3"></line>
+              <line x1="1" y1="14" x2="7" y2="14"></line>
+              <line x1="9" y1="8" x2="15" y2="8"></line>
+              <line x1="17" y1="16" x2="23" y2="16"></line>
+            </svg>
+          </div>
+          <div class="featured-title">
+            <h5>Technical Skills.</h5>
+          </div>
+          <div class="featured-desc">
+            <p>I can write neural network algorithms, predict possible outcomes using decision tree modeling, estimate relationships between dependant variable and one or more independant variable using regression analysis, have in-depth knowledge in Python, deploy cloud native apps using SQL (Presto, MySQL, Hive) and familiar with using Analytical tools like Tableau, Spotfire & Alteryx</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-12 md-mt-5">
+        <div class="featured-item style-2">
+          <div class="featured-icon">
+            <svg class="icon-vivus bd-color-2 feather feather-settings" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="3"></circle>
+              <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+            </svg>
+          </div>
+          <div class="featured-title">
+            <h5>Product Sense</h5>
+          </div>
+          <div class="featured-desc">
+            <p>I can quantify risk and produce data that can be used in deciding a response to corresponding risk, use data in today’s businesses to evaluate success and gather insights needed to run a sustainable company, represent data visually using charts, write applications to automate process and outline process to ensure that product quality is maintained. <br><br></p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-12 md-mt-5">
+        <div class="featured-item style-2">
+          <div class="featured-icon">
+            <svg class="icon-vivus bd-color-1 feather feather-layout" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+              <line x1="3" y1="9" x2="21" y2="9"></line>
+              <line x1="9" y1="21" x2="9" y2="9"></line>
+            </svg>
+          </div>
+          <div class="featured-title">
+            <h5>Capabilities</h5>
+          </div>
+          <div class="featured-desc">
+            <p>I can effectively present data to create a narrative that explains why a method works so effectively, can work without supervision and motivated enough to set and achieve goals, can provide my undivided attention to catch errors or changes before it snowballs and finally maintain good relationships with people who play vital part in a project or company.</p> 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--feature end-->
+
+
+
+
+
+
+<!--text block start-->
+
+<section>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-6 col-md-12">
+        <div class="image-anim">
+          <img class="img-center" src="images/index/1.png" alt="">
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-12 md-mt-5">
+        <div class="section-title">
+          <h2 class="title">Data Scientist <br> <span>What it Means?</span></h2>
+          <div class="title-bdr">
+            <div class="left-bdr"></div>
+            <div class="right-bdr"></div>
+          </div>
+          <p class="mb-0">
+            We are a new breed of analytical experts. We use our analytical expertise in both technology and social science to solve complex problems, find trends and manage data. <br> We are naturally curious and find interesting means to explore what problems need to be solved.
+          </p>
+          <br>
+          <p class="mb-0">Our tool box includes:</p>
+        </div>
+        <div class="row mb-4">
+          <div class="col-md-6">
+            <ul class="list-unstyled list-icon">
+              <li class="mb-3"><i class="fas fa-check-circle"></i> Data visualization</li>
+              <li class="mb-3"><i class="fas fa-check-circle"></i> Machine learning</li>
+              <li><i class="fas fa-check-circle"></i> Deep learning</li>
+            </ul>
+          </div>
+          <div class="col-md-6 sm-mt-2">
+            <ul class="list-unstyled list-icon">
+              <li class="mb-3"><i class="fas fa-check-circle"></i> Pattern recognition</li>
+              <li class="mb-3"><i class="fas fa-check-circle"></i> Data preparation</li>
+              <li><i class="fas fa-check-circle"></i> Text analytics</li>
+            </ul>
+          </div>
+        </div> <a class="btn btn-border btn-circle" href="career.html"><span>See which one of these I specialize in</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--text block end-->
+
+
+</div>
+
+<!--body content end--> 
+
+
+<!--footer start-->
+
+<div id="waterdrop"></div>
+<footer class="footer theme-bg">
+  <div class="primary-footer">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-4 col-md-6">
+          <div class="footer-logo mb-3" style="font-size: 3rem;">
+            <span style="color: black;">Jesse</span>Tech
+          </div>
+          
+        </div>
+        <div class="col-lg-4 col-md-6 sm-mt-5">
+          <h4 class="mb-4 text-white">Usefull link</h4>
+          <div class="footer-list justify-content-between d-flex">
+          <ul class="list-unstyled w-100">
+            <li><a href="about.html">About Me</a>
+            </li>
+            <li><a href="career.html">My Career</a>
+            </li>
+            <li><a href="portfolio.html">Portfolio</a>
+            </li>
+            <li><a href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+        </div>
+        <div class="col-lg-4 col-md-12 md-mt-5">
+          <div class="footer-cntct">
+          <h4 class="mb-4 text-white">Get In Touch</h4>
+          <ul class="media-icon list-unstyled">
+            <li>
+              <p class="mb-0"><i class="la la-map-o"></i>  <b>Silicon Valley, California</b>
+              </p>
+            </li>
+            <li><i class="la la-envelope-o"></i>  <a href="mailto:hjesse92@gmail.com"><b>hjesse92@gmail.com</b></a>
+            </li>
+            <li><i class="la la-phone"></i>  <a href="tel:(408) 318-1238"><b>(408) 318-1238</b></a>
+            </li>
+          </ul> 
+          <div class="social-icons mt-3">
+            <ul class="list-inline">
+              <li><a href="https://www.linkedin.com/in/wenxuanjessehe/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+              </li>
+              <li><a href="https://github.com/hjesse92"><i class="fab fa-github"></i></a>
+              </li>
+              <li><a href="https://www.instagram.com/jesse_he1/"><i class="fab fa-instagram"></i></a>
+              </li>
+            </ul>
+          </div>
+          </div>         
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="secondary-footer mt-5 text-center">
+    <div class="container">
+      <div class="copyright">
+        <div class="row">
+          <div class="col-md-12"> <span>Designed With Passion By <u><a href="https://webcannonz.com/"  target="_blank">Web Cannon-Z</a></u> | All Rights Reserved</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!--footer end-->
+
+
+</div>
+
+<!-- page wrapper end -->
+
+
+<!--back-to-top start-->
+
+<div class="scroll-top"><a class="smoothscroll" href="#top"><i class="la la-hand-pointer-o"></i></a></div>
+
+<!--back-to-top end-->
+
+ 
+<!-- inject js start -->
+
+<!-- scroll -->
+
+
+<!-- scroll end -->
+
+<!--== jquery -->
+<script src="js/common-theme.js"></script>
+
+<!--== nice-select -->
+<script src="js/jquery.nice-select.js"></script>
+
+<!--== owl-carousel -->
+<script src="js/owl-carousel/owl.carousel.min.js"></script> 
+
+<!--== magnific-popup --> 
+<script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+<!--== counter -->
+<script src="js/counter/counter.js"></script> 
+
+<!--== isotope -->
+<script src="js/isotope/isotope.pkgd.min.js"></script> 
+
+<!--== particles -->
+<script src="js/particles.min.js"></script>
+
+<!--== vivus -->
+<script src="js/vivus/pathformer.js"></script>
+<script src="js/vivus/vivus.js"></script>
+
+<!--== raindrops -->
+<script src="js/raindrops/jquery-ui.js"></script>
+<script src="js/raindrops/raindrops.js"></script>
+
+<!--== countdown -->
+<script src="js/countdown/jquery.countdown.min.js"></script> 
+
+<!--== contact-form -->
+<script src="js/contact-form/contact-form.js"></script>
+
+<!--== wow -->
+<script src="js/wow.min.js"></script> 
+
+<!--== theme-script -->
+<script src="js/theme-script.js"></script>
+
+<!-- inject js end -->
+
+</body>
+
+</html>
