changing order of userful links

--- a/career.html
+++ b/career.html
@@ -165,7 +165,7 @@
           </div>
           <div class="">
             <a class="btn btn-theme btn-circle " href="https://www.uber.com/" target="_blank"><span>Uber.com</span></a>
-          </div>  
+          </div>
         </div>
        <p class="lead text-black">Working on exciting A.I. projects at Uber Internal Audit and developing novel architectures to solve unprecedented problems in a fast-moving environment.</p>
           <ul>
@@ -495,7 +495,7 @@
 
 </div>
 
-<!--body content end--> 
+<!--body content end-->
 
 
 <!--footer start-->
@@ -509,15 +509,15 @@
           <div class="footer-logo mb-3" style="font-size: 3rem;">
             <span style="color: black;">Jesse</span>Tech
           </div>
-          
+
         </div>
         <div class="col-lg-4 col-md-6 sm-mt-5">
           <h4 class="mb-4 text-white">Usefull link</h4>
           <div class="footer-list justify-content-between d-flex">
           <ul class="list-unstyled w-100">
-            <li><a href="about.html">About Me</a>
-            </li>
             <li><a href="career.html">My Career</a>
+            </li>
+            <li><a href="about.html">My Story</a>
             </li>
             <li><a href="portfolio.html">Portfolio</a>
             </li>
@@ -538,7 +538,7 @@
             </li>
             <li><i class="la la-phone"></i>  <a href="tel:(408) 318-1238"><b>(408) 318-1238</b></a>
             </li>
-          </ul> 
+          </ul>
           <div class="social-icons mt-3">
             <ul class="list-inline">
               <li><a href="https://www.linkedin.com/in/wenxuanjessehe/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -549,7 +549,7 @@
               </li>
             </ul>
           </div>
-          </div>         
+          </div>
         </div>
       </div>
     </div>
@@ -580,7 +580,7 @@
 
 <!--back-to-top end-->
 
- 
+
 <!-- inject js start -->
 
 <!--== jquery -->
@@ -590,16 +590,16 @@
 <script src="js/jquery.nice-select.js"></script>
 
 <!--== owl-carousel -->
-<script src="js/owl-carousel/owl.carousel.min.js"></script> 
+<script src="js/owl-carousel/owl.carousel.min.js"></script>
 
-<!--== magnific-popup --> 
+<!--== magnific-popup -->
 <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
 
 <!--== counter -->
-<script src="js/counter/counter.js"></script> 
+<script src="js/counter/counter.js"></script>
 
 <!--== isotope -->
-<script src="js/isotope/isotope.pkgd.min.js"></script> 
+<script src="js/isotope/isotope.pkgd.min.js"></script>
 
 <!--== particles -->
 <script src="js/particles.min.js"></script>
@@ -613,13 +613,13 @@
 <script src="js/raindrops/raindrops.js"></script>
 
 <!--== countdown -->
-<script src="js/countdown/jquery.countdown.min.js"></script> 
+<script src="js/countdown/jquery.countdown.min.js"></script>
 
 <!--== contact-form -->
 <script src="js/contact-form/contact-form.js"></script>
 
 <!--== wow -->
-<script src="js/wow.min.js"></script> 
+<script src="js/wow.min.js"></script>
 
 <!--== theme-script -->
 <script src="js/theme-script.js"></script>
