--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="col-lg-6 col-md-12 md-mt-5 wow fadeInRight" data-wow-duration="2.5s" >
           <h5 class="title-theme-bg">Hey there, I'm Jesse</h5>
           <h1 class="mb-4">I'm a <br> <span class="font-w-7">Data Scientist</span> <br> at Uber</h1>
-          <p class="lead mb-4">I Work on exciting A.I. projects at Uber Internal Audit and help with developing novel architectures to solve unprecedented problems in a fast-moving environment.</p> 
+          <p class="lead mb-4">I Work on exciting A.I. projects at Uber Internal Audit and help with developing novel architectures to solve unprecedented problems in a fast-moving environment.</p>
           <!-- <a class="btn btn-theme " href="#jump" ><span>Let's Talk</span></a> -->
         </div>
       </div>
@@ -169,7 +169,7 @@
         <ul class="list-unstyled list-icon mb-5">
           <li class="mb-3"><i class="fas fa-check-circle"></i> Experienced Data Scientist with a demonstrated history of working in the tech industry.  </li>
           <li><i class="fas fa-check-circle"></i> Skilled in Machine Learning Algorithms, Data Science and Analytics, Accounting, and Public Speaking. Strong engineering professional with a Bachelor's Degree focused in Management Information Systems; Accounting; Finance from Purdue University.</li>
-        </ul> 
+        </ul>
         <!-- <a class="btn btn-theme btn-circle" href="contact.html"><span>Contact Me</span></a> -->
         <!-- <a class="btn btn-white btn-circle" href="career.html"><span>More About Me</span></a> -->
       </div>
@@ -205,7 +205,7 @@
             <h5>Technical Skills.</h5>
           </div>
           <div class="featured-desc">
-            <p>I can write neural network algorithms, predict possible outcomes using decision tree modeling, estimate relationships between dependant variable and one or more independant variable using regression analysis, have in-depth knowledge in Python, deploy cloud native apps using SQL (Presto, MySQL, Hive) and familiar with using Analytical tools like Tableau, Spotfire & Alteryx</p> 
+            <p>I can write neural network algorithms, predict possible outcomes using decision tree modeling, estimate relationships between dependant variable and one or more independant variable using regression analysis, have in-depth knowledge in Python, deploy cloud native apps using SQL (Presto, MySQL, Hive) and familiar with using Analytical tools like Tableau, Spotfire & Alteryx</p>
           </div>
         </div>
       </div>
@@ -221,7 +221,7 @@
             <h5>Product Sense</h5>
           </div>
           <div class="featured-desc">
-            <p>I can quantify risk and produce data that can be used in deciding a response to corresponding risk, use data in today’s businesses to evaluate success and gather insights needed to run a sustainable company, represent data visually using charts, write applications to automate process and outline process to ensure that product quality is maintained. <br><br></p> 
+            <p>I can quantify risk and produce data that can be used in deciding a response to corresponding risk, use data in today’s businesses to evaluate success and gather insights needed to run a sustainable company, represent data visually using charts, write applications to automate process and outline process to ensure that product quality is maintained. <br><br></p>
           </div>
         </div>
       </div>
@@ -238,7 +238,7 @@
             <h5>Capabilities</h5>
           </div>
           <div class="featured-desc">
-            <p>I can effectively present data to create a narrative that explains why a method works so effectively, can work without supervision and motivated enough to set and achieve goals, can provide my undivided attention to catch errors or changes before it snowballs and finally maintain good relationships with people who play vital part in a project or company.</p> 
+            <p>I can effectively present data to create a narrative that explains why a method works so effectively, can work without supervision and motivated enough to set and achieve goals, can provide my undivided attention to catch errors or changes before it snowballs and finally maintain good relationships with people who play vital part in a project or company.</p>
           </div>
         </div>
       </div>
@@ -303,7 +303,7 @@
 
 </div>
 
-<!--body content end--> 
+<!--body content end-->
 
 
 <!--footer start-->
@@ -317,15 +317,15 @@
           <div class="footer-logo mb-3" style="font-size: 3rem;">
             <span style="color: black;">Jesse</span>Tech
           </div>
-          
+
         </div>
         <div class="col-lg-4 col-md-6 sm-mt-5">
           <h4 class="mb-4 text-white">Usefull link</h4>
           <div class="footer-list justify-content-between d-flex">
           <ul class="list-unstyled w-100">
-            <li><a href="about.html">About Me</a>
-            </li>
             <li><a href="career.html">My Career</a>
+            </li>
+            <li><a href="about.html">My Story</a>
             </li>
             <li><a href="portfolio.html">Portfolio</a>
             </li>
@@ -346,7 +346,7 @@
             </li>
             <li><i class="la la-phone"></i>  <a href="tel:(408) 318-1238"><b>(408) 318-1238</b></a>
             </li>
-          </ul> 
+          </ul>
           <div class="social-icons mt-3">
             <ul class="list-inline">
               <li><a href="https://www.linkedin.com/in/wenxuanjessehe/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -357,7 +357,7 @@
               </li>
             </ul>
           </div>
-          </div>         
+          </div>
         </div>
       </div>
     </div>
@@ -388,7 +388,7 @@
 
 <!--back-to-top end-->
 
- 
+
 <!-- inject js start -->
 
 <!-- scroll -->
@@ -403,16 +403,16 @@
 <script src="js/jquery.nice-select.js"></script>
 
 <!--== owl-carousel -->
-<script src="js/owl-carousel/owl.carousel.min.js"></script> 
+<script src="js/owl-carousel/owl.carousel.min.js"></script>
 
-<!--== magnific-popup --> 
+<!--== magnific-popup -->
 <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
 
 <!--== counter -->
-<script src="js/counter/counter.js"></script> 
+<script src="js/counter/counter.js"></script>
 
 <!--== isotope -->
-<script src="js/isotope/isotope.pkgd.min.js"></script> 
+<script src="js/isotope/isotope.pkgd.min.js"></script>
 
 <!--== particles -->
 <script src="js/particles.min.js"></script>
@@ -426,13 +426,13 @@
 <script src="js/raindrops/raindrops.js"></script>
 
 <!--== countdown -->
-<script src="js/countdown/jquery.countdown.min.js"></script> 
+<script src="js/countdown/jquery.countdown.min.js"></script>
 
 <!--== contact-form -->
 <script src="js/contact-form/contact-form.js"></script>
 
 <!--== wow -->
-<script src="js/wow.min.js"></script> 
+<script src="js/wow.min.js"></script>
 
 <!--== theme-script -->
 <script src="js/theme-script.js"></script>
